pom corrected added support for media